Update to use new Deno imports for https://github.com/11ty/eleventy/issues/2335

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [dev]
 framework = "#static"
-command = "npx @11ty/eleventy --input=src --quiet --watch"
+command = "npx @11ty/eleventy --watch"
 
 [build]
-command = "npx @11ty/eleventy --input=src"
+command = "npx @11ty/eleventy --quiet=false"
 publish = "_site"
 
 [[edge_functions]]
