--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Demos for the Eleventy Edge plugin",
   "scripts": {
     "build": "netlify build",
-    "start": "netlify dev"
+    "start": "npx @11ty/eleventy && netlify dev",
+    "deploy": "netlify deploy --build"
   },
   "author": {
     "name": "Zach Leatherman",
@@ -26,7 +27,7 @@
   },
   "homepage": "https://github.com/11ty/demo-eleventy-edge#readme",
   "dependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.6",
+    "@11ty/eleventy": "github:11ty/eleventy#2335",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "netlify-cli": "^10.0.0"
   }
