--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.0-canary.8",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
-    "netlify-cli": "^10.0.0"
+    "netlify-cli": "10.0.0"
   }
 }
