Diagnosing Edge plugin regression (might be from liquidjs)

--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "homepage": "https://github.com/11ty/demo-eleventy-edge#readme",
   "dependencies": {
-    "@11ty/eleventy": "2.0.0-canary.13",
+    "@11ty/eleventy": "2.0.0-canary.15",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
-    "netlify-cli": "^10.9.1"
+    "netlify-cli": "^11.8.2",
+    "liquidjs": "9.41.0"
   }
 }
