--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@11ty/eleventy": "2.0.0-canary.12",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
-    "netlify-cli": "^10.18.0",
-    "liquidjs": "9.37.0"
+    "liquidjs": "9.37.0",
+    "netlify-cli": "^11.8.2"
   }
 }
