--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "homepage": "https://github.com/11ty/demo-eleventy-edge#readme",
   "dependencies": {
-    "@11ty/eleventy": "2.0.0-canary.33",
+    "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
-    "netlify-cli": "^12.7.2"
+    "netlify-cli": "^13.2.2"
   }
 }
